committing minor p tag adjustment in html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class='content'>
             <div class='textBox'>
                 <h2>Welcome to<br><span>Fossil</span></h2>
-                <p>Welcome to the landingpage of Mavrick Watts</p>
+                <p>Welcome to Fossil Watch!</p>
                 <a href='#' class='glow-button'>See the collection</a>
             </div>
             <div class='imgBox'>
