committing sections, images, and footer to the site.

--- a/index.html
+++ b/index.html
@@ -3,25 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fossil Watch - Landing Site</title>
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="sec">
       <header>
         <a href="#"><img src="images/fossil-logo-white.png" class="logo" /></a>
-        <ul>
+        <!-- <ul>
+          <li><a href="#">About</a></li>
           <li><a href="#">Watches</a></li>
           <li><a href="#">Social Media</a></li>
-          <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-        </ul>
+        </ul> -->
         
       </header>
       <div class='content'>
             <div class='textBox'>
-                <h2>Welcome to<br><span>Fossil</span></h2>
-                <p>Welcome to Fossil Watch!</p>
+                <h1>Experience</h1> 
+                <h2>Fashion and Technology</h2>
+                <p>Fossil's new collection of Hybrid and Touchscreen Smartwatches.</p>
                 <a href='#' class='glow-button'>See the collection</a>
             </div>
             <div class='imgBox'>
@@ -41,6 +43,67 @@
             <li><a href='https://www.instagram.com/fossil/'><img src='images/instagram.png'></a></li>
         </ul>
     </section>
+      <!-- watch description section -->
+    <section class='social-proof'>
+        <div class='social-proof-image'>
+          <img src="images/fossil_smartwatch.png">
+        </div><div class='social-proof-names'>
+          <h1 class='highlight-word'>Fossil Firsts line</h1><br>
+          <p>As the watch industry has changed, Fossil continues to do what it has always done best: focus on innovative style and technology to reinvent the watch for a new generation of fans. Fossil is proud to introduce the brand new collection of Hybrid and Touchscreen Smartwatches.</p>
+        </div>
+      </section>
+      <!-- social proof section  -->
+      <section class='social-proof'>
+        <div class='social-proof-names'>
+          <h2>Trusted by todays top <br>Actors and Musicians</h2>
+          <ul>
+            <li>Kristen Bell</li>
+            <li>Leslie Odom Jr.</li>
+            <li>Yar Shahidi</li>
+            <li>Austin Mahone</li>
+            <li>and more.</li>
+          </ul>
+        </div>
+        <div class='social-proof-image'>
+          <img src="images/ad_pic_3_austin_mahone.jpg">
+        </div>
+      </section>
+      <section class='social-proof'>
+        <div class='social-proof-image'>
+          <img src="images/fossil_activity_tracker.png">
+        </div><div class='social-proof-names'>
+          <h1 class='highlight-word'>It only gets better!</h1><br>
+          <p>New updates in the Fossil smartwatch collection for both men and women: Q Accomplice, Q Activist, Q Venture and Q Explorist. The hybrid smartwatches will launch in summer and new touchscreen devices powered by Android Wear™ throughout fall and holiday.</p>
+        </div>
+      </section>
+    <section class='brief-blurb'>
+      <div class="card mb-3">
+        <div class="card-body">
+          <p class="card-text"><blockquote></blockquote>“We know that this is a pivotal moment in the watch industry, and Fossil is leading the revolution to reinvent the traditional watch through the innovative design and technology found in our Hybrid Smartwatches”. Your first watch was likely a Fossil watch, but as customer behaviors and preferences have evolved, so have we. Our ability to merge fashion and design with emerging technologies makes us the perfect choice to be our customer’s first smartwatch.”</p> 
+          <br>
+          <p class='cco-quote'><strong>-Jill Elliott, Chief Creative Officer</strong></p>
+        </div>
+      </div>
+    </section>
+
+     <!-- Footer Section -->
+     <div class="footer">
+        <div class="footer-content">
+          <h3>Fossil</h3>
+          <ul class="socials">
+              <li><a href="https://www.facebook.com/Fossil">Facebook</a></li>
+              <li><a href="https://twitter.com/Fossil?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter</i></a></li>
+              <li><a href="https://www.instagram.com/fossil/">Instagram</i></a></li>
+              <li><a href="#"><i class='fa fa-google-plus'></i></a></li>
+          </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>Designed by Mavrick Watts</p>
+        </div>
+    </div>
+   
+
+
     <script src='main.js'></script>
   </body>
 </html>
